Made the entity and dal projects. Created the simplest version of Route class and created a GetAll routes method in RouteRepository

--- a/BikeForLife.Web/Pages/Routes.cshtml
+++ b/BikeForLife.Web/Pages/Routes.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model BikeForLife.Web.Pages.RoutesModel
 @{
-    ViewData["Title"] = "Routes";
+    ViewData["Title"] = "Ruter";
 }
 
 <h1>Routes</h1>
