--- a/BikeForLife.Web/wwwroot/Styling/MainStyle.css
+++ b/BikeForLife.Web/wwwroot/Styling/MainStyle.css
@@ -4,13 +4,18 @@
 }
 
 body {
+    margin: 0;
+    padding: 0;
 }
 
 header {
     display: flex;
+    box-sizing: border-box;
     justify-content: space-between;
     background-color: var(--turquoise-color);
     height: 8vh;
+    margin: 0;
+    padding: 0 5px;
 }
 
 #logo {
