Added the posibility to see routes, including fetching data from database. Added frontend for creating new routes.

--- a/BikeForLife.Web/Pages/Index.cshtml
+++ b/BikeForLife.Web/Pages/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
 @model BikeForLife.Web.Pages.IndexModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "BFL - Forside";
 }
 
-<h1>Index</h1>
+<h1>Bike for Life - Cykelklubben for alle</h1>
 
