--- a/BikeForLife.Web/Pages/_ViewImports.cshtml
+++ b/BikeForLife.Web/Pages/_ViewImports.cshtml
@@ -1,1 +1,2 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using BikeForLife.Entities;
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
