--- a/BikeForLife.Web/wwwroot/Styling/MainStyle.css
+++ b/BikeForLife.Web/wwwroot/Styling/MainStyle.css
@@ -15,12 +15,19 @@ header {
     background-color: var(--turquoise-color);
     height: 8vh;
     margin: 0;
-    padding: 0 5px;
+    padding: 0 2vw;
 }
 
 #logo {
     font-family: 'Rock Salt', cursive;
     font-size: 3.5vh;
+}
+#logo a {
+    text-decoration: none;
+}
+#logo a:visited {
+    color: inherit;
+
 }
 
 nav {
@@ -56,3 +63,93 @@ nav {
                 nav ul li a:hover {
                     background: var(--dark-turquoise-color);
                 }
+
+
+.wrapper {
+    width: 70vw;
+    margin: 0 auto;
+}
+
+/*Table design*/
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    font-size: 1.2rem;
+}
+
+    td a:visited {
+        color: inherit;
+    }
+
+th {
+    font-size: 1.3rem;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #ddd;
+}
+
+th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: darkgray;
+    color: white;
+}
+
+/*Forms design*/
+.form {
+    width: 50%;
+    margin: 3rem 0;
+    background: #ccc;
+    border-radius: 0.8rem;
+    padding: 1.5rem;
+}
+
+.form h2 {
+    margin: 0;
+    margin-bottom:2rem;
+}
+
+label {
+    font-size: 1.2rem;
+}
+
+input[type=text], input[type=number], select {
+    width: 100%;
+    padding: 0.5rem 0.8rem;
+    margin: 0.5rem 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input:focus, select:focus {
+    background-color: #eee;
+}
+
+button {
+    width: 100%;
+    font-size: 1rem;
+    background-color: #555;
+    color: white;
+    padding: 0.8rem 0.8rem;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+    button:hover {
+        background-color: #222;
+    }
