--- a/BikeForLife.Web/Pages/Routes.cshtml
+++ b/BikeForLife.Web/Pages/Routes.cshtml
@@ -35,7 +35,7 @@
 </table>
 
 <div class="form">
-    <h2>Opret nyt IT-udstyr</h2>
+    <h2>Opret ny rute</h2>
     <form asp-page="Routes">
         <label asp-for="BikeRoute.Name"></label>
         <input asp-for="BikeRoute.Name" />
