Added sql script. Fixed some styling and content of index.

--- a/BikeForLife.Web/Pages/Index.cshtml
+++ b/BikeForLife.Web/Pages/Index.cshtml
@@ -5,4 +5,17 @@
 }
 
 <h1>Bike for Life - Cykelklubben for alle</h1>
+<p>
+    Denne hjemmeside er lavet til cykelklubben Bike for Life. Klubben rummer alle cyklister, både de garvede og de nye motionister. Det er muligt at finde klubbens medlemmer og de forskellige registrerede ruter.
+</p>
+
+<p>
+    Her på hjemmesiden kan man også tilmelde sig løbsruterne. Ved tilmelding skal medlemmet have opnået det rette niveau for at kunne køre en bestemt rute. Opnåelse af niveau foregår efter følgende regler:
+</p>
+<ul>
+    <li>Nem: Her starter alle</li>
+    <li>Normal: Når man har kørt 5 turer</li>
+    <li>Svær: Når man har kørt 12 turer, heraf mindst 5 i sværhedsgrad normal</li>
+    <li>Expert: Når man har kørt 30 turer, heraf mindst 10 i sværhedsgrad svær. Desuden skal man have været medlem i mindst ét år.</li>
+</ul>
 
