--- a/BikeForLife.Web/Pages/Routes.cshtml
+++ b/BikeForLife.Web/Pages/Routes.cshtml
@@ -25,8 +25,7 @@
                     <td>@bikeRoute.Country</td>
                     <td>@bikeRoute.City</td>
                     <td>
-                        <a href=""><i class="fa fa-edit" aria-hidden="true"></i></a>&nbsp;&nbsp;
-                        <a href=""><i class="fa fa-trash" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-edit" aria-hidden="true"></i></a>
                     </td>
                 </tr>
             }
