started on the members files so i can display the members on the members page.

--- a/BikeForLife.Web/Pages/Shared/_Layout.cshtml
+++ b/BikeForLife.Web/Pages/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li><a asp-page="Index">Forside</a></li>
-                <li><a asp-page="">Medlemmer</a></li>
+                <li><a asp-page="Members">Medlemmer</a></li>
                 <li><a asp-page="Routes">Ruter</a></li>
             </ul>
         </nav>
