--- a/BikeForLife.Web/wwwroot/Styling/MainStyle.css
+++ b/BikeForLife.Web/wwwroot/Styling/MainStyle.css
@@ -126,7 +126,7 @@ label {
     font-size: 1.2rem;
 }
 
-input[type=text], input[type=number], select {
+input[type=text], input[type=number],input[type=date], select {
     width: 100%;
     padding: 0.5rem 0.8rem;
     margin: 0.5rem 0;
