Added option to add a new member to the DB

--- a/BikeForLife.Web/Pages/Members.cshtml
+++ b/BikeForLife.Web/Pages/Members.cshtml
@@ -27,6 +27,7 @@
 </table>
 
 <div class="form">
+    <h2>Opret nyt medlem</h2>
     <form asp-page="Members">
         <label asp-for="Member.Name"></label>
         <input asp-for="Member.Name" />
